# CVAC

algorithms/sample/: CMakeLists.txt
algorithms/sample/detectorService/: CMakeLists.txt  SampleICEI.cpp  SampleICEI.h
algorithms/sample/src/: CMakeLists.txt  SampleDetector.h  SampleTrainer.cpp
include/util/: ServiceMan.h
src/util/: FileUtils.cpp  ServiceMan.cpp
